# DS20_weather

./: README.md  back_up.py  main.py  pyproject.toml  הפרוייקט_השני_DS20_(Train+Valid).ipynb
