[tool.poetry]
name = "ds20-weather"
version = "0.1.0"
description = ""
authors = ["Yigael <yigaell@gmail.com>"]
readme = "README.md"
package-mode = false  # ← העבר לפה

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.48.0"
pandas = "^2.3.1"
seaborn = "^0.13.2"
numpy = "^2.3.2"
datetime = "^5.5"
pytz = "^2025.2"
plotly = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
